# ChangeLog for net-misc/icecast
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/icecast/ChangeLog,v 1.109 2014/12/06 09:37:13 polynomial-c Exp $

  06 Dec 2014; Lars Wendler <polynomial-c@gentoo.org> -icecast-2.3.3-r2.ebuild,
  -icecast-2.3.3-r3.ebuild, -icecast-2.4.0.ebuild, -files/init.d.icecast,
  metadata.xml:
  Removed vulnerable versions. Took over maintenance.

  03 Dec 2014; Agostino Sarubbo <ago@gentoo.org> icecast-2.4.1.ebuild:
  Stable for ppc, wrt bug #529956

  29 Nov 2014; Agostino Sarubbo <ago@gentoo.org> icecast-2.4.1.ebuild:
  Stable for ppc64, wrt bug #529956

  23 Nov 2014; Agostino Sarubbo <ago@gentoo.org> icecast-2.4.1.ebuild:
  Stable for x86, wrt bug #529956

  23 Nov 2014; Agostino Sarubbo <ago@gentoo.org> icecast-2.4.1.ebuild:
  Stable for amd64, wrt bug #529956

*icecast-2.4.1 (20 Nov 2014)

  20 Nov 2014; Lars Wendler <polynomial-c@gentoo.org> +icecast-2.4.1.ebuild,
  files/icecast.xml:
  Security bump (bug #529956) with kind permission by hwoarang.

*icecast-2.4.0 (23 May 2014)

  23 May 2014; Lars Wendler <polynomial-c@gentoo.org> -icecast-2.3.3-r1.ebuild,
  +icecast-2.4.0.ebuild, +files/init.d.icecast-2:
  Version bump. Removed old. Added rewritten init script. Permission kindly
  granted by hwoarang.

*icecast-2.3.3-r3 (26 Nov 2013)

  26 Nov 2013; Markos Chandras <hwoarang@gentoo.org> +icecast-2.3.3-r3.ebuild,
  files/init.d.icecast:
  Implement missing reload function. Bug #324727

  25 Sep 2013; Agostino Sarubbo <ago@gentoo.org> icecast-2.3.3-r2.ebuild:
  Stable for ppc, wrt bug #485136

  23 Sep 2013; Agostino Sarubbo <ago@gentoo.org> icecast-2.3.3-r2.ebuild:
  Stable for ppc64, wrt bug #485136

  22 Sep 2013; Agostino Sarubbo <ago@gentoo.org> icecast-2.3.3-r2.ebuild:
  Stable for x86, wrt bug #485136

  21 Sep 2013; Agostino Sarubbo <ago@gentoo.org> icecast-2.3.3-r2.ebuild:
  Stable for amd64, wrt bug #485136

*icecast-2.3.3-r2 (31 Aug 2013)
