@@ -4,10 +4,10 @@ DESCRIPTION=An opensource alternative to shoutcast that supports mp3, ogg (vorbi
 EAPI=5
 HOMEPAGE=http://www.icecast.org/
 IUSE=kate logrotate +speex +ssl +theora +yp
-KEYWORDS=amd64 ppc ppc64 x86 ~x86-fbsd
+KEYWORDS=~amd64 ~ppc ~ppc64 ~x86 ~x86-fbsd
 LICENSE=GPL-2
 RDEPEND=dev-libs/libxslt dev-libs/libxml2 media-libs/libogg media-libs/libvorbis kate? ( media-libs/libkate ) logrotate? ( app-admin/logrotate ) speex? ( media-libs/speex ) theora? ( media-libs/libtheora ) yp? ( net-misc/curl ) ssl? ( dev-libs/openssl:0= )
 SLOT=0
-SRC_URI=http://downloads.xiph.org/releases/icecast/icecast-2.4.1.tar.gz
+SRC_URI=http://downloads.xiph.org/releases/icecast/icecast-2.4.2.tar.gz
 _eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=f9ec5ab1f0bd3cadc40a32b6c0e7be9a
+_md5_=fb62bee2b449c2bf50139ea326c39790
