@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile install
+DEPEND=dev-libs/glib:2= dev-libs/libgcrypt:0=
+DESCRIPTION=Btrfs deduplication utility
+EAPI=5
+HOMEPAGE=https://github.com/markfasheh/duperemove
+KEYWORDS=~amd64
+LICENSE=GPL-2
+RDEPEND=dev-libs/glib:2= dev-libs/libgcrypt:0=
+SLOT=0
+SRC_URI=https://github.com/markfasheh/duperemove/archive/v0.09.3.tar.gz -> duperemove-0.09.3.tar.gz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4
+_md5_=bc888a7c24119200ee9744dc73629f20
