@@ -8,23 +8,25 @@ AUX icecast.service 185 SHA256 fbb6dfff2d5075d5921138352c7242742fc1e8f228fa977ea
 AUX icecast.xml 6775 SHA256 4c9c2ffa6d2e50ac940df978b05acbdd94ffe128a8d54224ab43084b3602cb51 SHA512 72620980b9213aa3570b9e4e803cb901f0a3770b081721f0f4e01ad9a0af0cc8a7f6242940b1ac9941f51320ab8c3e97245cf8e0249c5bf504b8f3a01c250a96 WHIRLPOOL 60822963e707ee0a9f7f2e9ac9fe9d28245bda7d84e0d00d43e22286dae2838c513093f989a3bc87aac89363b4d8f9fd22555e31552315cf84b9fdf5bfc29074
 AUX init.d.icecast-2 430 SHA256 9f509d6081e556f4579ff91511f17b79a7bffc2a9f5da935eea5ed7ab788d2de SHA512 35110473f5638e41af4098c7ffd5ca79d008a3811351c58a5f9450520ee45fd3bac4b11532412263de21b4e56362a4528ffb0b574cf7e7a424b00423333a491c WHIRLPOOL f37b57cc6c3b85d436adeb047f2bf4b5a27f1008ac1d2645dfab62629c3faf75e91f47b5780322f91a93176540d5fd13e47d9881e355232602ec24a54744c8e5
 DIST icecast-2.4.1.tar.gz 2392650 SHA256 43f89ec301db1652740d1069bbc2c2e5244611fb86743dd5de90ce97a9a7454b SHA512 220bcf8f0cfd2dbad1ca79655069dba7f5c2178db8e240c281236eefde50882e9411baf38b0895feacfb4131bfb631620027a3de97c49b68b038a916f315fc81 WHIRLPOOL fd3960436326b6e7027c561c8bb1ea2ce63ca97ac8feb00ff862914c3eccb0700c1c80694967e143f3e06d12eedb764558e89f441cf410afc16d3319840e5d2d
-EBUILD icecast-2.4.1.ebuild 2222 SHA256 ccdb6a59ecae22ea5564f4da98f45db42b9d848bbeab7137e9b0d70d07511114 SHA512 9d413c9850b6eefe8690210d30c5916175c82686d6db1e04911462566e87f47947e678873af6607193c7d4825bd45a1d077bef1902ea6102d8cea05f7f40d9da WHIRLPOOL 92c37e6f3136d4a342087c516b62d11c6f6d2954cd31b161b1b1445cefdc8ba8fe537410ebe35066c87e78647438b84a15a9cb77c675bcd69c8511535bcdae26
-MISC ChangeLog 15764 SHA256 67edf49133e603fbde59131d641dee6ded702e6cf3b7fc73f30593093ab87e7a SHA512 59c82855901017eff4add7cd2ae8556876c6283467af057f746d141bfc0cb964d8a54aa73a7facc0af970308aa521a7be1b95868b9e923334861ce166bb91d4a WHIRLPOOL 39c722f31fa037dc64ce12fcf8bae5634380aa2c9edd9bf6aca923a85ae08343e259a1036d44257bda1036821e096d5b8c91a5de42d33353e527ca4219a31366
+DIST icecast-2.4.2.tar.gz 2388381 SHA256 aa1ae2fa364454ccec61a9247949d19959cb0ce1b044a79151bf8657fd673f4f SHA512 6fc5a54b97f1efd63f0d3ea17fc7124cb30cfafae70615f5afdf878df9e3f57ca7882757a0691329d63ee4fc7555c695fefa415f2deb955d01244afc4528a260 WHIRLPOOL bbc369f1a5b35aec364a42aab28e92499fc0cb3a5fcef469899c77d801cd2123637328227d206c2bf9427a2c8c958036d706f61507677e240b6ef8e3546cb037
+EBUILD icecast-2.4.1.ebuild 2234 SHA256 6989078d38e4c96f1a28040adf3e93d3d42b16d08bbec589136141d14d0b5cfc SHA512 6670f6aee090ff0064f47700bc11f688735c80397cedb71bf753771091b523391dcf37b0a8a54e9f86ac7a40b00ce342ba24b15c5bceb1ba8b6cbff8d2f3a6fd WHIRLPOOL 81c1d4cb75329d24f1e79cc9752f10e6b4a0a0694775adc73aa624b483708e0f43c9c5c221924fd4283e8c7fb4d5b63a85f3917bb624862af4793a2eb744c374
+EBUILD icecast-2.4.2.ebuild 2238 SHA256 e4cdf4614542a7243dc60059577b5b96d9c5bd74a33e010083af65c5c4b0154f SHA512 4c645288c430ebb4b1a7b7901764e5d8c4b09059e8a0955b433ed0d7534125004ea49d789f498138618ffbf8cf14a3ce5bfcc82dc5cd046b69e3b0dadfbdacdf WHIRLPOOL 59591133d2e44733070973ca962f0b0a6b90a526fd3ed8873cd6fe0f705474d3ac8aa4c7ae03be845042b93d5c77613e4c76d0a1d8be34a3ec7eae576ea7bc0a
+MISC ChangeLog 15961 SHA256 38d30722971b7e9f76651d2424f92a212fcdc34628112b474ce8acdf1045cc32 SHA512 780ef8161f5e12e7dee0fd79c9b633ed27898d0d1638c0b97b699528e3822417057dc946979142eb76a30a50ac72448ddd3105558af2236d00bbac73f3379ecb WHIRLPOOL 894c870cc6e642ecc6786264e5a11eeb34ae2ea8334575bcd037ed6fc9ccb6a4f638af69dc40534e005dc04702d6ced2d28571740e47d6d2abee5b999db105c7
 MISC metadata.xml 506 SHA256 f9fea7aa5320f4b659937981c5610565c725d11b020bb3a2fbc07700d3a38126 SHA512 e127e413551ac69ba625e7357ea9d623b2f9ee4d3c4a9fc8cf30c051217ceaedc8222df8f248a4255af612a89af4e3610800257db698a0b7b7ca9805ff4d1226 WHIRLPOOL 58d09f3933345fb163bbd0719f6800c2b0f360fa52738e1d81b1d6eb8a29e6769a68c804814f97778c0e953afb05b38b55716c363c81d3d1eccce5bec2f77fcc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUgs5KAAoJEPiazRVxLXTFpCoQAK/jw5aWK02OXVJsu4TBv9mQ
-t14SIpyMuMGmarA68uBVJn1UG4VQ6FWz6w48TpNxldYixf3nP5cIxRR2432+7Vpo
-OJBv7+8AOe85V/yF1UhTvcZpHRdmZq9H9i62qNAwMlBW0EHf1iqzWImACpB2Iwnn
-Fscap88Oij+jJmgatOr79EuSprkGE9ODSAv879Kzj/67iX/l1d6QUrw82Zcjqqv4
-rk8cS7DZbzu+W5BG79XoK8gH22egvvSCNLb14BrrpARbTw+54SJm5j4jhD8Wz+Fg
-YhEXIXRcb3Nvv1gWOAE1ny+9Jcn48RntYyf8r1D8eYRHQdHq5OGqrv1kTI+mXN9t
-8iAcFuUAzcBqJnFDyThsiZHIOpkjxLoaR4+c6aY1WS5Jyt/3sRL/+gr503cIPcKM
-A2xASTHYswqeRsFp3q5MU4E+WuJPcbj33SKGwVf0rt0ffYKhGl0h4eno+1YNqArx
-DqXrlzFTSUi0436KrI80+yOseKNn6UnGSlY5+OivFtl+PpUh+2HYO5YOzjpj9VIB
-+okeo9fmWi9F3bDzeTAtjGH02LiQ3Y1Z2EfDr1e//bDjL51ZJxcCwmWL2aXA6cxM
-QBZNX3S+HxEi89cDn+OANTBh6fDDGgJJEy+3qSQAyEOnayJBwfqnHXaSIMTaW0g3
-avhb2jY70LER3nw67x0S
-=iveZ
+iQIcBAEBCAAGBQJVJtJTAAoJEPiazRVxLXTFzysP/0uOEV76IJicNC5RQoKCAGcb
+UX89a9EnFxqDxHXqpnic//79EcycivHz5TGCz9E2FV8otF42kynEbfscVtrbtp6S
+bLafeIrmj5Lp3zHDIwxSnIXPm/Q/226UvvWzkpo8WdYWTKnzvcD1+cXVB96/Nfgb
+haKT2iIKHPVnr+gGZNu7pdLX9zMEDsKT/lNAnb+tc+Dk/1siybzKNGLSnN2KK30v
+kuCPcBKDQacj9RW6mN2/8dhjSIo2NMOql8OIl2QvaYnJSAYd0nldTuTnEuFVHHfe
+FRpUXje6IfwrnL2pPvrZWxnkDuEoLkhWjbhgtluAZ5mUjJWQQc8J2J6n5FE3wk2x
+i9EyFzF+5mwe1VDe8+hfWyrz3uIPavYVCaIjUvI1RONFayoMucym9C+IS+ronRZA
+yCojiUMbFav9bWdEQAvxevF164+RPLS8u1cjXdgtlRSNtH/sWDTd63NjzMhHfldW
+imtdyvoaIAxoSP3RU3RUlx+G0O265Q+MOBaYFqB/YHhEzPWooTF2lOoUVtRaDBmv
+Z3tbl4PESkOCZgnREHc6A94XgHSXjhIjsErgAhRak4kpQLh3Sj+tjmYG1WZjwXWZ
+7qAuQbzvBwbDk5BZSMjWTJncLE8UoCxI7JTNYbUthcZ4filQtBAUpeVReEDLO/vd
++WA5jKg0uiFHGJSd4EBx
+=P24S
 -----END PGP SIGNATURE-----
