@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/icecast/icecast-2.4.1.ebuild,v 1.6 2015/04/09 19:26:10 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/icecast/icecast-2.4.2.ebuild,v 1.1 2015/04/09 19:26:10 polynomial-c Exp $
 
 EAPI=5
 inherit eutils autotools systemd user
@@ -11,7 +11,7 @@ SRC_URI="http://downloads.xiph.org/releases/icecast/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="amd64 ppc ppc64 x86 ~x86-fbsd"
+KEYWORDS="~amd64 ~ppc ~ppc64 ~x86 ~x86-fbsd"
 IUSE="kate logrotate +speex +ssl +theora +yp"
 
 #Although there is a --with-ogg and --with-orbis configure option, they're
