@@ -3,26 +3,28 @@ Hash: SHA256
 
 DIST duperemove-0.09.1.tar.gz 54978 SHA256 58d5635fa48bf88108dd833453638ad394427750f58b5ee0f3f1a8f1ec9c141b SHA512 49de99b64c8b0a71a47474480f33b07f2e6602c355621a9d0c6c92a3b7c2f2f5e6c03abc4e2459a1b96fa9543767c0abe48c5c63daf53962a3033a3b1984a037 WHIRLPOOL bed45acfd63f49f44832589964a305614649b6f41013295d1710d784f8dfeb34ff5721ae641790b97b70541222987135377913843b516850f62689ad66a18661
 DIST duperemove-0.09.2.tar.gz 55715 SHA256 2f7155bb916f4827a940c7ceb16c785b529320e621d3c7cbbd78639a06e65094 SHA512 acc1c16ed3faf08e54d4adfcc9f852d2c967981bc461ab45b0673f46f2e86109020d56e641da9764d46f2cc53cbcad5d2aa014357a819ae170375d784b2c08c5 WHIRLPOOL b5cd27237fadbe9aecf76abf63788bcbbabcc17625f1d3daeeee2b315b1a3b9b67fa9309703857e0c564d53fd1573983aa9a55c5b406a56855af7911375bc60b
+DIST duperemove-0.09.3.tar.gz 55722 SHA256 349b047cfb388f2d616695b4ecbfa091243f84024bd75fbbbd7b88fb498794a0 SHA512 fe2a19088ec9ac3dda35da8b9580ddcc1c3b49e60824f2c1bbf8c013756c060b4c9663d1977bb6622c4de19754fd4a1011cc09ef3c785c2b4b218e0c9fb15b87 WHIRLPOOL 022eba5fb6ad1a4c74a4843762e7ccc7f6ba8187adbd6eb1bbe0168482cdd57664d7f6d9b4715d36866a8d026786abcf1e77ec87530f46fbea59b1357d4c90a4
 EBUILD duperemove-0.09.1.ebuild 589 SHA256 dea0abef784123411bccb826a1971f3937e55b3c798f6528606dc818cca0ece3 SHA512 f518812efe5672658746b712669fe35bda8321c52bc605771bca5220a2de3940561877fb4aa7325d7ab09e6cde9691f065315f9fa4259755d306c7969c296553 WHIRLPOOL ce2ebe90c22fabbd3e56681340e97135451924f3f66f34f24f847c8b016010744ddcd93890ef56c900135bb7293d8f70ae39ca5e4512417168330e152b77e36b
 EBUILD duperemove-0.09.2.ebuild 1026 SHA256 f15f426eb4bb141f7f408e33f68dca99c054a93fc74218bfc8d4adfdf87af908 SHA512 10ee4e82bd05bd3ce3bfab977d049a1962c060c27afbf2a5bc6942a65345f62917295fe1704decc422d0271f847b1e34d6c57790741f21cdc52a5d6bfdd9067b WHIRLPOOL 7689a31ee64439db969e023d349a196fe1ab057ddd309bb4faf7b8ebf986c26b4a7e9d598180728704090d4ad8611cc5ffacb30470727d6f41f1c7e37bd2f421
-MISC ChangeLog 631 SHA256 ea6ae87841475d001996a5b828fa4b6941936970884a39e5fb664d09ce7bc199 SHA512 e74d2016cd76ce921087f0cca977fb3f3608b2ae4a949fdb18e6d5f2f74dbc8705be77670ef32eef63b6f697906030b4d9d1c07531e2dd9eef10f56995c3fec6 WHIRLPOOL 79011726dd96494fae79d7bcaf8cc485d0f3a1e814ba52fc8e37403b75ba3e77a0a081a92b639d8106546e2b72b41f80d6cb371fc1c8913686b15a67d98438a2
+EBUILD duperemove-0.09.3.ebuild 851 SHA256 0e9e32aa8c1a094f14f0e06b4510d43b691dac6262583e12be409240920b83ed SHA512 1b65fde73ca3052b9cc67547df48fda6a77d6e5a79e86d3c65af12ea3d2b4e05dcfb417b2b90cda7b55f01bf64232b23f8346b63be3a03604d866ba4c926c163 WHIRLPOOL 2dc69bcd43c789fbb1c21d1fd4fa4d04c71eebb8aa2a4e4a9ed517777556567e3bda80d7845fb40d6a6787cc5963e166a14ccd8a902c107ad5db045b48e3edd5
+MISC ChangeLog 759 SHA256 0bcb6bb8c3584187b49a71ec71b951e5fa48c43b1088ac4b18de3f51dc72849e SHA512 07cb7444c58b7c384b603cbee0b2a69e8b0232a87ef5637135b478cf7cf35696ed28423d8f18a58e737e32b18e26667edeb1c4b2355786b2368f85ad389bf9c7 WHIRLPOOL 16bc3baa84e93a5764db7971c2b95384c3ac838d00a5ea6284b7790346fbffb30dfd016f0f2b28098694f6df7d8263841c4faa1233d5d0bb8e89e2171dc03019
 MISC metadata.xml 354 SHA256 dc1b8adf21fd7b69d47ff30c5f4ac3576ded6044c57d34ba4f077de73b98cf4d SHA512 212383d647685cbb384de0575de6edb7d93ecdb8683633d58ab9cfe0cbaf2211eccb88b59c48d35e0f03da84fa8eee1d74b00ea4f6bf895a518989fef49e30f7 WHIRLPOOL adfc2c3a3a07046ef0fdcac7cf6978a4e9a78473d8552c22a5f4bfacbd3493c657273dab567c6efc5b1fdbaf269f4dcb8487abda2b1b9cb7b1690c952b3a106e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJVIsErXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVJs7EXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZODr8P/2TK3KV5EEwyqiL+Ag22PlCc
-oj04f5gSET/YYN9LEHvrTZk+1/FaCtLOZaS6kJB6e4yxBp9evt0J4ve2ouBMMwhq
-tDuvWSsYAUHzIfFf16fWqEf2z/iA/H8iqNgw7DCQhqOgmpltnEkXxEOZ0RYorxyY
-CvNG9XcaaOu9SuwSpJYyniwLyIn89+lmocN9RjB5+uaXBiq+KuZEutrhNZnV5MPD
-Wv8OkYV5filLsoSiGGppCD+H69izCxc72xjPsWkVMzv7w3TU7Cg+nv8B+LVDjd3W
-NPipsIualZNvRSFYk9k0P4gEHYbATwiaOUk+HwazdDbzpReIEIW6Qphsa8IQ6khE
-5vFtYv3I+X6YoI7AUWV89voBPmIgxDtXJKqhmi9HsK565i6I3WXdKJigrs30UmnF
-1fjUVannRSeTK2BKF4DcD62+lrSpoFAs7Q3d3Qh30eSxuR3lBluZs3KdsA377WHj
-ThpuBvPMb+PrqC8aGl4GahrEHWWBxX4357KZsiaRnu7lNn96jr0Np3kTFCG+wy3a
-o7o6gKDP/DGZIkbmJkBHOSPO4SxNCBI5Mebw00HHRgsAXXnNZ8+ASNB08+07LSfy
-hnPlco5Abm5UQrKBPbbkG+E8UX6lgynj+Rb9sEEHMCwTuTJW88+X3shWP6C3ZTUq
-2fv0oS4jbEhs8gyMrFAm
-=+ACL
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOZ70P/iedbPU2hIzi80csj4R9854f
++rcB6wnFH9bRpk3cFEgpEyD5R7dfHl7/OsUO9uCXJwD24fQ7kxXozhg2nHuuUWLt
+T/iflQU0n/BfCiS9CLmeIsh/aJ4I5LM9lGme/3bkw97qbG5CeLDPqIyefQWWddAm
+fY431p84/kjs5oKTG96IBm3i+Hm8prFdGCIAU6VyNw7dXMB3rPnYNhLTZGrPlHSF
+su2lZN2g/+LjcEs7iQEJWht+PUUy2Eh4i4yJoJkhbximVm03AhVmI9MajtWHynWF
+9+te/wE5odhHzIByUahuRHYjAf7P2X5x9oqKBb8s+x1iCRQiTLTOFTxmYntaATn7
+Ez4yaAAIPIAukLdCyTXH8VuqlbwvxGcDk3KNaaPG9TSkzoXYWohVzOacA2XVv3ro
+0FaCrouqMvGqC9tYn+TONL6NryKSoj53TgyY7+IAgQCbEXxSViJiBM6REW9clHbi
+eGEMESIuAQlGoALXJ3nQzxa1Tbp1gNC1uEyTOCRvhXnHMqQNhi34r2sK94+CqzuP
+0dLkBmuwNv4IDQxNz0d/P666ZzMBHQPmb/6HxUgYIoLyuziy3u6UlwHK+dLtSUgL
+FL17pciZv+5cbLd0J1KdaHs3IVxN+ugMwgjWsq+3SySWrwHAn4BfibNUepOLFVJk
+G3gt33NzQrinhk8A+fyx
+=WOEE
 -----END PGP SIGNATURE-----
