@@ -1,6 +1,11 @@
 # ChangeLog for sys-fs/duperemove
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/duperemove/ChangeLog,v 1.2 2015/04/06 17:23:53 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/duperemove/ChangeLog,v 1.3 2015/04/09 19:10:51 mgorny Exp $
+
+*duperemove-0.09.3 (09 Apr 2015)
+
+  09 Apr 2015; Michał Górny <mgorny@gentoo.org> +duperemove-0.09.3.ebuild:
+  Version bump.
 
 *duperemove-0.09.2 (06 Apr 2015)
 
