@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/icecast
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/icecast/ChangeLog,v 1.109 2014/12/06 09:37:13 polynomial-c Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/icecast/ChangeLog,v 1.110 2015/04/09 19:26:10 polynomial-c Exp $
+
+*icecast-2.4.2 (09 Apr 2015)
+
+  09 Apr 2015; Lars Wendler <polynomial-c@gentoo.org> icecast-2.4.1.ebuild,
+  +icecast-2.4.2.ebuild:
+  Security bump (bug #545968). Fixed slot dependency on openssl.
 
   06 Dec 2014; Lars Wendler <polynomial-c@gentoo.org> -icecast-2.3.3-r2.ebuild,
   -icecast-2.3.3-r3.ebuild, -icecast-2.4.0.ebuild, -files/init.d.icecast,
